# darwin-perf

./: LICENSE  Makefile  README.md  pyproject.toml  setup.py  setup_app.py
Formula/: darwin-perf.rb
scripts/: install.sh
src/darwin_perf/: __init__.py  __main__.py  _amd.py  _api.py  _cli_modes.py  _cpu.c  _daemon.py  _dns_cache.py  _fallback.py  _gpu.c  _ids.py  _ids_baseline.py  _ids_detectors.py  _ids_llm.py  _ids_log.py  _ids_rules.py  _ids_webhook.py  _ioreport.c  _ioreport.h  _lockfile.py  _memory.c  _menubar.py  _native.c  _native.h  _net.c  _network.py  _nvidia.py  _platform.py  _proc.c  _recorder.py  _sampler.py  _sensors.c  _sysinfo.py  cli.py  gui.py  tui.py
src/macos_gpu_proc/: __init__.py  _native.c  cli.py  gui.py  tui.py
src/macos_gpu_proc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_basic.py
