[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macos-gpu-proc"
version = "0.1.0"
description = "Per-process GPU utilization monitoring for macOS — like Activity Monitor, from Python."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Adam Mikulis"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["macos", "gpu", "monitoring", "apple-silicon", "metal", "mlx", "pytorch", "mps"]

[project.optional-dependencies]
children = ["psutil"]
cli = ["psutil"]
tui = ["textual>=0.40", "psutil"]
gui = ["pywebview>=5.0", "psutil"]
all = ["psutil", "textual>=0.40", "pywebview>=5.0"]

[project.scripts]
gpu-proc = "macos_gpu_proc.cli:main"

[project.urls]
Homepage = "https://github.com/adammikulis/macos-gpu-proc"
Issues = "https://github.com/adammikulis/macos-gpu-proc/issues"

[tool.setuptools.packages.find]
where = ["src"]
