[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darwin-perf"
version = "1.1.0"
description = "Cross-platform system performance monitoring — GPU, CPU, memory, energy, temperature. macOS via Mach APIs, NVIDIA via pynvml, AMD via pyamdgpuinfo, Linux/Windows via /proc and ctypes. No sudo, no psutil."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Adam Mikulis"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["gpu", "cpu", "monitoring", "performance", "apple-silicon", "nvidia", "amd", "cuda", "metal", "rocm", "pynvml", "mlx", "pytorch", "mps"]

[project.optional-dependencies]
nvidia = ["pynvml>=12.0"]
amd = ["pyamdgpuinfo>=2.1"]
tui = ["textual>=0.40"]
gui = ["pywebview>=5.0"]
menubar = ["pyobjc-framework-Cocoa>=10.0"]
all = ["textual>=0.40", "pywebview>=5.0", "pyobjc-framework-Cocoa>=10.0", "pynvml>=12.0"]

[project.scripts]
darwin-perf = "darwin_perf.cli:main"

[project.urls]
Homepage = "https://github.com/adammikulis/darwin-perf"
Issues = "https://github.com/adammikulis/darwin-perf/issues"

[tool.setuptools.packages.find]
where = ["src"]
